<resources>
    <string name="app_name">Dust</string>
    <string name="account_hint">请输入账号</string>
    <string name="password_hint">请输入密码</string>
    <string name="password_confirm_hint">请确认密码</string>
    <string name="phone_number_hint">请输入手机号</string>
    <string name="certificate_hint">请输入验证码</string>
    <string name="cut_down_timer">%1$d s</string>
    <string name="login">登录</string>
    <string name="sms_login">短信登录</string>
    <string name="pwd_login">密码登录</string>
    <string name="third_party_login">第三方登录</string>
    <string name="login_we_chat">微信登录</string>
    <string name="bind_we_chat">绑定微信</string>
    <string name="setting">设置</string>
    <string name="server_setting">服务器设置http(s)://</string>
    <string name="server_hint">192.168.1.1</string>
    <string name="background_authority">后台运行</string>
    <string name="battery_optimization">电池优化</string>
    <string name="reset">重置</string>
    <string name="save">保存</string>
    <string name="app_version">App版本</string>
    <string name="update">更新</string>
    <string name="check_update">检查更新</string>
    <string name="update_to">最新版本：v%1$s\n更新内容：\n%2$s\n是否下载更新？</string>
    <string name="register">注册</string>
    <string name="verification_hint">请输入验证码</string>
    <string name="account_tips">账号提示</string>
    <string name="password_tips">密码提示</string>
    <string name="phone_number_tips">手机号提示</string>
    <string name="get">获取</string>
    <string name="verification_ips">验证码提示</string>
    <string name="mine">个人中心</string>
    <string name="info">消息中心</string>
    <string name="map">地图中心</string>
    <string name="task">任务中心</string>
</resources>