<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <EditText
        android:id="@+id/edt_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:autofillHints="@string/account_hint"
        android:hint="@string/account_hint"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/tv_account_tips"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/tv_account_tips"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/account_tips"
        android:textColor="#ff0000"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@id/edt_password"
        app:layout_constraintEnd_toEndOf="@+id/edt_account"
        app:layout_constraintTop_toBottomOf="@+id/edt_account" />

    <EditText
        android:id="@+id/edt_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:autofillHints="@string/password_hint"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@id/tv_password_tips"
        app:layout_constraintEnd_toEndOf="@id/edt_account"
        app:layout_constraintStart_toStartOf="@id/edt_account"
        app:layout_constraintTop_toBottomOf="@+id/tv_account_tips" />

    <TextView
        android:id="@+id/tv_password_tips"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password_tips"
        android:textColor="#ff0000"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@id/edt_password_confirm"
        app:layout_constraintEnd_toEndOf="@+id/edt_password"
        app:layout_constraintTop_toBottomOf="@+id/edt_password" />

    <EditText
        android:id="@+id/edt_password_confirm"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:autofillHints="@string/password_confirm_hint"
        android:hint="@string/password_confirm_hint"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@id/tv_password_confirm_tips"
        app:layout_constraintEnd_toEndOf="@id/edt_account"
        app:layout_constraintStart_toStartOf="@id/edt_account"
        app:layout_constraintTop_toBottomOf="@+id/tv_password_tips" />

    <TextView
        android:id="@+id/tv_password_confirm_tips"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password_tips"
        android:textColor="#ff0000"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/edt_phone_number"
        app:layout_constraintEnd_toEndOf="@+id/edt_password_confirm"
        app:layout_constraintTop_toBottomOf="@+id/edt_password_confirm" />

    <EditText
        android:id="@+id/edt_phone_number"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:autofillHints="@string/phone_number_hint"
        android:hint="@string/phone_number_hint"
        android:inputType="phone"
        app:layout_constraintBottom_toTopOf="@id/tv_phone_number_tips"
        app:layout_constraintEnd_toEndOf="@id/edt_account"
        app:layout_constraintStart_toStartOf="@id/edt_account"
        app:layout_constraintTop_toBottomOf="@+id/tv_password_confirm_tips" />

    <TextView
        android:id="@+id/tv_phone_number_tips"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phone_number_tips"
        android:textColor="#ff0000"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@id/edt_verification"
        app:layout_constraintEnd_toEndOf="@+id/edt_phone_number"
        app:layout_constraintTop_toBottomOf="@+id/edt_phone_number" />

    <EditText
        android:id="@+id/edt_verification"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:autofillHints="@string/verification_hint"
        android:hint="@string/verification_hint"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@id/tv_verification_tips"
        app:layout_constraintEnd_toStartOf="@+id/btn_get_verification"
        app:layout_constraintStart_toStartOf="@+id/edt_account"
        app:layout_constraintTop_toBottomOf="@+id/tv_phone_number_tips" />

    <Button
        android:id="@+id/btn_get_verification"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:enabled="false"
        android:text="@string/get"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@id/tv_verification_tips"
        app:layout_constraintEnd_toEndOf="@+id/edt_account"
        app:layout_constraintStart_toEndOf="@+id/edt_verification"
        app:layout_constraintTop_toBottomOf="@+id/tv_phone_number_tips" />

    <TextView
        android:id="@+id/tv_verification_tips"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/verification_ips"
        android:textColor="#ff0000"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@id/btn_register"
        app:layout_constraintEnd_toEndOf="@+id/edt_verification"
        app:layout_constraintTop_toBottomOf="@+id/edt_verification" />

    <Button
        android:id="@+id/btn_register"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:enabled="false"
        android:text="@string/register"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/edt_account"
        app:layout_constraintStart_toStartOf="@id/edt_account"
        app:layout_constraintTop_toBottomOf="@id/tv_verification_tips" />

</androidx.constraintlayout.widget.ConstraintLayout>