<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_server_setting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/server_setting"
        app:layout_constraintBottom_toTopOf="@+id/tv_battery_optimization"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/edt_server"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <EditText
        android:id="@+id/edt_server"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints="@string/server_hint"
        android:hint="@string/server_hint"
        android:inputType="textUri"
        app:layout_constraintBaseline_toBaselineOf="@+id/tv_server_setting"
        app:layout_constraintLeft_toRightOf="@+id/tv_server_setting"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/tv_battery_optimization"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/battery_optimization"
        app:layout_constraintBottom_toTopOf="@+id/tv_background_authority"
        app:layout_constraintEnd_toEndOf="@id/tv_server_setting"
        app:layout_constraintRight_toLeftOf="@+id/btn_battery_optimization"
        app:layout_constraintStart_toStartOf="@id/tv_server_setting"
        app:layout_constraintTop_toBottomOf="@+id/tv_server_setting" />

    <Button
        android:id="@+id/btn_battery_optimization"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/setting"
        app:layout_constraintBaseline_toBaselineOf="@id/tv_battery_optimization"
        app:layout_constraintEnd_toEndOf="@id/edt_server"
        app:layout_constraintLeft_toRightOf="@id/tv_battery_optimization"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="@id/edt_server" />

    <TextView
        android:id="@+id/tv_background_authority"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/background_authority"
        app:layout_constraintBottom_toTopOf="@+id/btn_reset"
        app:layout_constraintEnd_toEndOf="@id/tv_server_setting"
        app:layout_constraintRight_toLeftOf="@+id/btn_background_authority"
        app:layout_constraintStart_toStartOf="@id/tv_server_setting"
        app:layout_constraintTop_toBottomOf="@+id/tv_battery_optimization" />

    <Button
        android:id="@+id/btn_background_authority"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/setting"
        app:layout_constraintBaseline_toBaselineOf="@id/tv_background_authority"
        app:layout_constraintEnd_toEndOf="@id/edt_server"
        app:layout_constraintLeft_toRightOf="@id/tv_background_authority"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="@id/edt_server" />

    <Button
        android:id="@+id/btn_reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/reset"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/tv_server_setting"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="@id/tv_server_setting"
        app:layout_constraintTop_toBottomOf="@+id/tv_background_authority" />

    <Button
        android:id="@+id/btn_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        app:layout_constraintBaseline_toBaselineOf="@id/btn_reset"
        app:layout_constraintEnd_toEndOf="@id/edt_server"
        app:layout_constraintStart_toStartOf="@+id/edt_server" />

</androidx.constraintlayout.widget.ConstraintLayout>