<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/edt_phone_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:autofillHints="@null"
        android:hint="@string/phone_number_hint"
        android:inputType="phone"
        app:layout_constraintBottom_toTopOf="@id/edt_verification"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <EditText
        android:id="@+id/edt_verification"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:autofillHints="@null"
        android:hint="@string/certificate_hint"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@id/btn_login"
        app:layout_constraintEnd_toStartOf="@id/btn_get_verification"
        app:layout_constraintStart_toStartOf="@id/edt_phone_number"
        app:layout_constraintTop_toBottomOf="@+id/edt_phone_number" />

    <Button
        android:id="@+id/btn_get_verification"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:text="@string/get"
        app:layout_constraintBottom_toTopOf="@id/btn_login"
        app:layout_constraintEnd_toEndOf="@id/edt_phone_number"
        app:layout_constraintStart_toEndOf="@id/edt_verification"
        app:layout_constraintTop_toBottomOf="@id/edt_phone_number" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:enabled="false"
        android:text="@string/login"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/edt_phone_number"
        app:layout_constraintStart_toStartOf="@id/edt_phone_number"
        app:layout_constraintTop_toBottomOf="@+id/edt_verification" />

</androidx.constraintlayout.widget.ConstraintLayout>