<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray">

    <FrameLayout
        android:id="@+id/frame_main"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/tv_task"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_task"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/task"
        android:textColor="@drawable/tab_menu_text"
        app:drawableTopCompat="@drawable/task"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/tv_map"
        app:layout_constraintTop_toBottomOf="@+id/frame_main" />

    <TextView
        android:id="@+id/tv_map"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/map"
        android:textColor="@drawable/tab_menu_text"
        app:drawableTopCompat="@drawable/map"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/tv_task"
        app:layout_constraintRight_toLeftOf="@+id/tv_info"
        app:layout_constraintTop_toBottomOf="@+id/frame_main" />

    <TextView
        android:id="@+id/tv_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/info"
        android:textColor="@drawable/tab_menu_text"
        app:drawableTopCompat="@drawable/info"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/tv_map"
        app:layout_constraintRight_toLeftOf="@+id/tv_mine"
        app:layout_constraintTop_toBottomOf="@+id/frame_main" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_dot_red"
        android:gravity="center"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@id/tv_info"
        app:layout_constraintTop_toTopOf="@id/tv_info" />

    <TextView
        android:id="@+id/tv_mine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/mine"
        android:textColor="@drawable/tab_menu_text"
        app:drawableTopCompat="@drawable/mine"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/tv_info"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frame_main" />

</androidx.constraintlayout.widget.ConstraintLayout>